--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,8 +51,8 @@ input[type="text"] {
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
-  width: 100%;
-  max-width: 500px;
+  width: 500px;
+  max-width: 80%;
 }
 
 input[type="submit"] {
@@ -104,6 +104,7 @@ button[type="submit"]:hover {
 
 .evolutionList {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -130,4 +131,11 @@ a {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
+@media (max-width: 1000px)  {
+  .evolutionList {
+    display: flex;
+    flex-direction: column
+  }
 }
